init react app, config webpack

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/public/stylesheets/style.css')
   body
     block content
+
+    script(type='text/javascript' src='http://localhost:8080/bundle.js')
